refactor: 重写模板文件路径获取逻辑

--- a/generators/app/templates/pages/splash/index.wxml
+++ b/generators/app/templates/pages/splash/index.wxml
@@ -7,11 +7,11 @@
 />
 
 <view class="splash-name">
-  <%= name %>
+  generator weapp demo
 </view>
 
 <view class="splash-slogan">
-  <%= description %>
+  A weapp seed project.
 </view>
 
 <view class="splash-action">
